--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
     <link rel="stylesheet" href="style/home.css" />
+
+    <meta name="google-site-verification" content="Yzlfy7EwWUi8ZX0RN900PVYd053NeOWh5IMDKf1UhPw" />
 </head>
 
 <body>
